Feature: Download and share Email

--- a/src/main/resources/static/html/audience.html
+++ b/src/main/resources/static/html/audience.html
@@ -30,7 +30,7 @@
 
     <div class="audience-container">
         <!-- Card 1: Impact & Policy -->
-        <div class="audience-card card-policy" data-audience="Policy makers">
+        <div class="audience-card card-policy" data-audience="Policy">
             <div class="card-overlay">
                 <div class="card-content">
                     <h4>Impact &<br>Policy Influencers</h4>
