--- a/src/main/resources/static/html/share_download.html
+++ b/src/main/resources/static/html/share_download.html
@@ -30,7 +30,7 @@
             <!-- 分享區塊 -->
             <section class="option-group">
                 <h3 class="with-icon">
-                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none"><path d="M10 13C9.44444 13 8.97222 12.8104 8.58333 12.4312..." fill="#577E81"/></svg>
+                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none"><path d="..\image\share.png" fill="#577E81"/></svg>
                     Share
                 </h3>
                 <div class="option-item">
@@ -51,7 +51,7 @@
             <!-- 下載區塊 -->
             <section class="option-group">
                 <h3 class="with-icon">
-                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"><path d="M0 12.75V9.75..." fill="#577E81"/></svg>
+                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"><path d="..\image\download.png" fill="#577E81"/></svg>
                     Download
                 </h3>
                 <div class="option-item">
